--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,39 @@
   --global-black: black;
   --global-white: white;
   --global-grey: #C4C4C4;
+  --global-grey-darker: #4C4C4C;
   --global-primary: #25a48c;
+  --global-failed: red;
+  --global-success: blue;
 
   padding: 2px;
   margin: 0;
+  padding: 0;
+  font-size: 101%;
 }
 
 .App {
   text-align: center;
+}
+
+.top-bar {
+  height: auto;
+  padding: 15px;
+  margin: 0;
+  background-color: var(--global-primary);
+  display: flex;
+  justify-content: start;
+}
+
+.top-bar .logo {
+  max-height: 60px;
+  max-width: 60px;
+  cursor: pointer;
+}
+
+.top-bar h2 {
+  color: var(--global-white);
+  font-size: 150%;
 }
 
 .personal-container {
@@ -22,9 +47,21 @@
   max-width: 400px;
 }
 
+.row1 {
+  margin: 60px 20px;
+}
+
+.row2 {
+  margin: 60px 0px;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .info {
-  padding: 10px;
-  border: solid 1px var(--global-grey);
+  padding: 25px;
+  border: solid 2px var(--global-grey);
   border-bottom: none;
   display: flex;
   flex-direction: row;
@@ -52,7 +89,7 @@
 
 .graphs {
   padding: 10px;
-  border: solid 1px var(--global-grey);
+  border: solid 2px var(--global-grey);
 }
 
 .history-button {
@@ -76,4 +113,228 @@
 .graphs .history-button {
   top: 0;
   right: -40%;
+}
+
+.progress-track {
+  height: 120%;
+  padding-left: 40px;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.checkpoints {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.checkpoint {
+  text-align: center;
+  margin: 5px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.checkpoint p {
+  font-size: 150%;
+  color: var(--global-white);
+}
+
+.checkpoint-progress {
+
+}
+
+.finished {
+  background-color: var(--global-primary);
+}
+
+.in-progress {
+  background-color: orange;
+}
+
+.failed {
+  background-color: var(--global-failed);
+}
+
+.not-started {
+  background-color: var(--global-grey-darker);
+}
+
+.performance {
+  padding: 30px;
+  text-align: justify;
+}
+
+.system-stats {
+  padding: 30px;
+  text-align: justify;
+}
+
+.progress {
+  padding: 10px;
+}
+
+.pref {
+  margin-top: 30px;
+}
+
+.title-w-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/*
+  Operator screen designs
+*/
+
+.operator-screen {
+  display: flex;
+  flex-direction: row;
+  padding: 30px;
+}
+
+.eme-container {
+  margin: 10px;
+  min-width: 400px;
+  min-height: 750px;
+  max-height: 750px;
+  overflow-y: scroll;
+  border: 3px solid var(--global-failed);
+  text-align: justify;
+}
+
+.eme-container .header {
+  padding: 5px;
+  text-align: center;
+  background-color: var(--global-failed);
+  color: var(--global-white);
+  font-size: 110%;
+}
+
+.eme-container .emergencies {
+  padding: 10px;
+}
+
+.eme-box {
+  padding: 10px;
+  margin: 5px;
+}
+
+.tooltip-content {
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: space-between !important;
+  width: 100% !important;
+  font-size: larger !important;
+  font-weight: 600 !important;
+  text-transform: capitalize !important;
+}
+
+.req-container {
+  margin: 10px;
+  min-width: 400px;
+  min-height: 750px;
+  max-height: 750px;
+  overflow-y: scroll;
+  border: 3px solid var(--global-grey-darker);
+  text-align: justify;
+}
+
+.req-container .header {
+  padding: 5px;
+  text-align: center;
+  background-color: var(--global-grey-darker);
+  color: var(--global-white);
+  font-size: 110%;
+}
+
+.vertical-line {
+  padding-top: 30px;
+  border-left: 2px solid var(--global-grey);
+  min-height: 750px;
+  max-height: 750px;
+  overflow-y: scroll;
+  position: absolute;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.rooms-list {
+  display: inline-grid;
+  overflow-y: scroll;
+  max-height: 650px;
+  overflow-y: scroll;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  grid-template-columns: auto auto auto;
+}
+
+.room {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  border: 1px solid var(--global-grey-darker);
+}
+
+.room .header {
+  padding: 5px;
+  padding-right: 0;
+  padding-left: 0;
+  background-color: var(--global-grey-darker);
+  color: var(--global-white);
+  font-size: 110%;
+  display: flex;
+  flex-direction: row;
+  text-align: justify;
+  transition: all 0.6s;
+  cursor: pointer;
+} 
+
+.room .header h2 {
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.room .action {
+  padding: 10px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.room .states {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.room .states .icon--ok {
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid var(--global-black);
+  border-radius: 50px;
+  padding-right: 25px;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+.room .states .icon--alert {
+  background-color: var(--global-failed);
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid var(--global-black);
+  border-radius: 50px;
+  padding-right: 25px;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+.room:hover .header {
+  background-color: var(--global-primary);
 }
