--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@
   text-align: center;
 }
 
+@keyframes rollIn {
+  0% { opacity: 0; transform: translateX(400px) rotate(120deg); }
+  100% { opacity: 1; transform: rotate(0deg); } 
+} 
+
+@keyframes rollOut {
+  0% { opacity: 1; transform: translateX(0px) rotate(0deg); }
+  100% { opacity: 0; transform: translateX(-50px) rotate(-160deg); }
+}
+
 .top-bar {
   height: auto;
   padding: 15px;
@@ -26,10 +36,22 @@
   justify-content: start;
 }
 
-.top-bar .logo {
+.top-bar .link:hover {
+  background-color: transparent;
+}
+
+.top-bar .link .logo {
   max-height: 60px;
   max-width: 60px;
   cursor: pointer;
+  animation: rollIn 2.5s;
+}
+
+.top-bar::after {
+  max-height: 60px;
+  max-width: 60px;
+  cursor: pointer;
+  animation: rollOut 3s;
 }
 
 .top-bar h2 {
@@ -43,8 +65,8 @@
 }
 
 .left {
-  padding: 15px;
-  max-width: 400px;
+  padding: 25px;
+  width: 500px;
 }
 
 .row1 {
@@ -196,6 +218,7 @@
 
 .eme-container {
   margin: 10px;
+  border-radius: 20px;
   min-width: 400px;
   min-height: 750px;
   max-height: 750px;
@@ -233,6 +256,7 @@
 
 .req-container {
   margin: 10px;
+  border-radius: 20px;
   min-width: 400px;
   min-height: 750px;
   max-height: 750px;
@@ -268,17 +292,40 @@
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   grid-template-columns: auto auto auto;
+  float: right;
 }
+
+.rooms-list::-webkit-scrollbar {
+  border-radius: 10px;
+  background-color: var(--global-primary);
+  width: 10px;
+}
+
+.req-container::-webkit-scrollbar {
+  border-radius: 10px;
+  background-color: transparent;
+  width: 0px;
+}
+
+.eme-container::-webkit-scrollbar {
+  border-radius: 10px;
+  background-color: transparent;
+  width: 0px;
+}
+
 
 .room {
   margin: 10px;
   display: flex;
   flex-direction: column;
   text-align: justify;
+  border-radius: 10px;
   border: 1px solid var(--global-grey-darker);
 }
 
+
 .room .header {
+  border-radius: 8px 8px 0 0;
   padding: 5px;
   padding-right: 0;
   padding-left: 0;
@@ -328,6 +375,8 @@
   border-radius: 50px;
   padding-right: 25px;
   padding-left: 25px;
+  color: white;
+  font-weight: 900;
   cursor: pointer;
 }
 
@@ -384,4 +433,25 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.login-button {
+  padding: 20px;
+  transition: ease-in-out 0.65s;
+}
+
+.login-button:hover {
+  background-color: var(--global-primary) !important;
+  color: var(--global-white) !important;
+  border: 2px solid #000000 !important;
+}
+
+.links {
+  margin: 20px;
+  padding: 20px;
+}
+
+.link-box {
+  text-decoration: none !important;
+  color: black !important;
 }
