--- a/src/App.css
+++ b/src/App.css
@@ -472,6 +472,15 @@
 
 .link-box {
   text-decoration: none !important;
+  size: max-content;
+}
+
+.link2 {
+  text-decoration: none !important;
   color: black !important;
-  size: fit-content;
+  size: max-content;
+}
+
+.link2:hover {
+  background-color: transparent !important;
 }
