--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
   --global-white: white;
   --global-grey: #C4C4C4;
   --global-grey-darker: #4C4C4C;
-  --global-primary: #25a48c;
-  --global-failed: red;
+  --global-green: #25a48c;
+  --global-primary:#2196F3;
+  --global-failed: #f3212d;
   --global-success: blue;
 
   padding: 2px;
